--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,9 @@
     <color name="green_200">#AAF0C4</color>
     <color name="green_500">#16B364</color>
     <color name="green_700">#087443</color>
+    <color name="yellow_200">#FFE9B1</color>
+    <color name="yellow_500">#FFC93C</color>
+    <color name="yellow_700">#A17E24</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
