--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -8,9 +8,6 @@
     android:fillViewport="true">
 
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="16dp"
@@ -62,7 +59,7 @@
         app:layout_constraintTop_toBottomOf="@+id/daftar" />
 
     <EditText
-        android:id="@+id/nama_lengkapET"
+        android:id="@+id/et_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -87,10 +84,10 @@
         android:layout_marginTop="20dp"
         android:text="@string/email"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nama_lengkapET" />
+        app:layout_constraintTop_toBottomOf="@+id/et_name" />
 
     <EditText
-        android:id="@+id/EmailET"
+        android:id="@+id/et_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -106,20 +103,20 @@
         />
 
     <TextView
-        android:id="@+id/nomor_telepon"
+        android:id="@+id/tv_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textColor="#101828"
-        android:fontFamily="@font/manrope_medium"
         android:layout_marginTop="20dp"
-        android:text="@string/nomor_telepon"
+        android:fontFamily="@font/manrope_medium"
+        android:text="@string/password"
+        android:textColor="#101828"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EmailET" />
+        app:layout_constraintTop_toBottomOf="@+id/et_email" />
 
 
     <EditText
-        android:id="@+id/nomorET"
+        android:id="@+id/et_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -127,20 +124,20 @@
         android:background="@drawable/edittext"
         android:hint="@string/cthpass"
         android:textSize="16sp"
-        android:inputType="phone"
+        android:inputType="textPassword"
         android:padding="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/cbSK"
-        app:layout_constraintTop_toBottomOf="@+id/nomor_telepon"
+        app:layout_constraintTop_toBottomOf="@+id/tv_password"
         />
 
     <CheckBox
         android:id="@+id/cbSK"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        app:layout_constraintTop_toBottomOf="@+id/nomorET"
-        app:layout_constraintBottom_toTopOf="@+id/btnSelanjutnya"
+        app:layout_constraintTop_toBottomOf="@+id/et_password"
+        app:layout_constraintBottom_toTopOf="@+id/btn_register"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="12dp"
@@ -152,11 +149,11 @@
         />
 
     <Button
-        android:id="@+id/btnSelanjutnya"
+        android:id="@+id/btn_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/manrope_bold"
-        android:hint="@string/selanjutnya"
+        android:hint="@string/register"
         android:textColorHint="@color/white"
         android:layout_marginTop="16dp"
         android:textSize="14sp"
@@ -173,7 +170,7 @@
         android:fontFamily="@font/manrope_medium"
         android:textSize="14sp"
         android:text="@string/masuk_span"
-        app:layout_constraintTop_toBottomOf="@+id/btnSelanjutnya"
+        app:layout_constraintTop_toBottomOf="@+id/btn_register"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="16dp"
