--- a/app/src/main/res/layout/community_activity.xml
+++ b/app/src/main/res/layout/community_activity.xml
@@ -31,7 +31,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/et_topic_search"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginHorizontal="20dp"
@@ -52,7 +52,22 @@
         android:layout_height="419dp"
         android:layout_marginTop="28dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
+        app:layout_constraintTop_toBottomOf="@+id/et_topic_search"
         tools:listitem="@layout/community_recycler_view" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_add_community"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:backgroundTint="#16B364"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:tint="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="20dp"
+        android:src="@drawable/baseline_add_24"
+        android:contentDescription="null" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
