--- a/app/src/main/res/drawable/bg_weather.xml
+++ b/app/src/main/res/drawable/bg_weather.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF"/>
+            <solid android:color="#FFFFFFFF"/>
             <corners android:radius="5dp" />
         </shape>
     </item>
