--- a/app/src/main/res/layout/detail_thread_activity.xml
+++ b/app/src/main/res/layout/detail_thread_activity.xml
@@ -38,6 +38,7 @@
             android:textSize="20dp" />
 
         <Button
+            android:id="@+id/submit_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Submit"
