--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -90,6 +90,16 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <Button
+        android:id="@+id/btn_community"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/CLHero"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/teal_200"
+        android:text="to community"
+        />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/Card_weather"
         android:layout_width="wrap_content"
