--- a/app/src/main/res/layout/update_delete_thread_activity.xml
+++ b/app/src/main/res/layout/update_delete_thread_activity.xml
@@ -30,21 +30,21 @@
         <TextView
             android:id="@+id/toolbar_title"
             android:layout_marginLeft="20dp"
-            android:fontFamily="@font/manrope_extrabold"
+            android:fontFamily="@font/manrope_bold"
             style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Diskusi"
+            android:text="Edit diskusi"
             android:textColor="@color/white"
             android:textFontWeight="800"
             android:textSize="20dp" />
 
         <Button
-            android:id="@+id/submit_button"
+            android:id="@+id/edit_button"
+            android:fontFamily="@font/manrope_bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/manrope_bold"
-            android:text="Submit"
+            android:text="Edit"
             android:layout_marginRight="20dp"
             android:layout_gravity="right"
             android:background="@drawable/roundedbutton"
@@ -76,26 +76,40 @@
                 android:layout_height="60dp"
                 tools:srcCompat="@tools:sample/avatars" />
         </androidx.cardview.widget.CardView>
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:textFontWeight="800"
-            android:textSize="25sp"
-            android:layout_gravity="center"
-            android:text="Ceritakan Momenmu"/>
+            android:orientation="vertical"
+            android:layout_marginLeft="20dp">
+            <TextView
+                android:id="@+id/thread_title"
+                android:fontFamily="@font/manrope_extrabold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:textStyle="bold"
+                android:text="Eric Johnson"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/thread_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:text="Kemarin, 21.40" />
+        </LinearLayout>
     </LinearLayout>
 
     <EditText
         android:id="@+id/et_description"
         android:inputType="textMultiLine"
-        android:gravity="bottom"
-        android:lines="8"
         android:fontFamily="@font/manrope_bold"
-        android:minLines="3"
+        android:lines="8"
+        android:minLines="6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="20dp"
+        android:minHeight="200dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
         android:drawablePadding="10dp"
@@ -105,5 +119,18 @@
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@id/detail_thread_avatar"
         tools:layout_editor_absoluteX="20dp" />
+
+    <Button
+        android:id="@+id/button_delete"
+        android:layout_width="wrap_content"
+        android:fontFamily="@font/manrope_bold"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:text="delete thread"
+        android:drawableTint="@color/black"
+        android:drawableStart="@drawable/ic_delete"
+        app:layout_constraintTop_toBottomOf="@+id/et_description"
+        app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
