--- a/app/src/main/res/layout/activity_ensiklopedia.xml
+++ b/app/src/main/res/layout/activity_ensiklopedia.xml
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/topbar"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
         android:padding="16dp"
         android:orientation="vertical"
         >
@@ -56,7 +56,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
                     android:text="Tanaman Populer"
-                    android:textSize="24dp"
+                    android:textSize="24sp"
                     android:textStyle="bold"
                     />
                 <Space
@@ -95,7 +95,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
                     android:text="Penyakit Populer"
-                    android:textSize="24dp"
+                    android:textSize="24sp"
                     android:textStyle="bold"
                     />
                 <Space
@@ -130,7 +130,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:text="Produk Populer"
-                android:textSize="24dp"
+                android:textSize="24sp"
                 android:textStyle="bold"
                 />
             <androidx.recyclerview.widget.RecyclerView
@@ -145,4 +145,14 @@
                 tools:listitem="@layout/item_rv_tokped" />
         </LinearLayout>
     </ScrollView>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_nav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/bottom_navigation_menu"
+        app:labelVisibilityMode="labeled"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
