--- a/app/src/main/res/layout/community_activity.xml
+++ b/app/src/main/res/layout/community_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    android:fitsSystemWindows="false"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
@@ -48,10 +48,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/thread_recycler_view"
-        android:layout_width="405dp"
-        android:layout_height="419dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginTop="28dp"
+        android:layout_marginHorizontal="16dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_topic_search"
         tools:listitem="@layout/community_recycler_view" />
 
@@ -68,6 +70,16 @@
         android:layout_marginEnd="20dp"
         android:src="@drawable/baseline_add_24"
         android:contentDescription="null" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_nav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/bottom_navigation_menu"
+        app:labelVisibilityMode="labeled" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
