--- a/app/src/main/res/layout/community_recycler_view.xml
+++ b/app/src/main/res/layout/community_recycler_view.xml
@@ -7,7 +7,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/thread_layout"
-        android:layout_width="409dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
