--- a/app/src/main/res/layout/community_activity.xml
+++ b/app/src/main/res/layout/community_activity.xml
@@ -55,6 +55,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_topic_search"
+        android:layout_marginBottom="100dp"
         tools:listitem="@layout/community_recycler_view" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -65,6 +66,8 @@
         android:backgroundTint="#16B364"
         app:layout_constraintBottom_toBottomOf="parent"
         app:tint="@color/white"
+        android:layout_margin="30dp"
+        android:layout_marginVertical="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="20dp"
