--- a/app/src/main/res/layout/update_delete_thread_activity.xml
+++ b/app/src/main/res/layout/update_delete_thread_activity.xml
@@ -178,6 +178,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="20dp"
+                android:background="@drawable/custom_input"
+                android:padding="10dp"
                 android:hint="add your reply here"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/buttons"/>
@@ -186,7 +188,7 @@
                 android:id="@+id/replies_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginHorizontal="16dp"
+                android:paddingHorizontal="16dp"
                 android:layout_marginTop="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
