--- a/app/src/main/res/layout/community_activity.xml
+++ b/app/src/main/res/layout/community_activity.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="false"
+    tools:context=".CommunityActivity"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
@@ -52,10 +53,12 @@
         android:layout_height="0dp"
         android:layout_marginTop="28dp"
         android:layout_marginHorizontal="16dp"
+        android:paddingHorizontal="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_topic_search"
-        android:layout_marginBottom="100dp"
+        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
+        android:layout_marginBottom="8dp"
         tools:listitem="@layout/community_recycler_view" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -64,12 +67,11 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:backgroundTint="#16B364"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
         app:tint="@color/white"
         android:layout_margin="30dp"
         android:layout_marginVertical="50dp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="20dp"
         android:layout_marginEnd="20dp"
         android:src="@drawable/baseline_add_24"
         android:contentDescription="null" />
