--- a/app/src/main/res/layout/community_recycler_view.xml
+++ b/app/src/main/res/layout/community_recycler_view.xml
@@ -3,12 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
 
     <androidx.cardview.widget.CardView
         android:id="@+id/thread_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingHorizontal="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -86,12 +88,13 @@
     <TextView
         android:id="@+id/thread_description"
         android:fontFamily="@font/manrope_bold"
-        android:layout_width="388dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:textSize="16sp"
         android:text="TextView"
         android:textAlignment="textStart"
+        android:paddingHorizontal="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/thread_layout" />
@@ -101,6 +104,8 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="10dp"
+        android:paddingHorizontal="16dp"
+        android:layout_marginLeft="16dp"
         android:background="@drawable/roundedbutton"
         app:layout_constraintTop_toBottomOf="@+id/thread_description"
         app:layout_constraintStart_toStartOf="parent"
@@ -111,17 +116,18 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
+        android:paddingHorizontal="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/thread_images">
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/thread_like_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:radius="10dp"
             android:text="20"
             android:textSize="20sp"
-            android:drawableLeft="@drawable/ic_favorite_outline"
+            android:drawableStart="@drawable/ic_favorite_outline"
             android:textColor="#F04438"
             android:paddingLeft="10dp"
             android:backgroundTint="#FECDCA"
@@ -129,6 +135,7 @@
             android:background="@drawable/roundedbutton"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
+
             app:backgroundTint="#FECDCA"
             />
 
